k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: visa-app-service
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: visa-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080

---
apiVersion: v1
kind: Endpoints
metadata:
  name: visa-app-service
  namespace: default
subsets:
  - addresses:
      - ip: 172.18.0.3
    ports:
      - port: 80
