k8s-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: visa-app-service
  namespace: default
spec:
  selector:
    app: visa-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: visa-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: www.bantuqifu.online
      http:
        paths:
          - path: /visa
            pathType: Prefix
            backend:
              service:
                name: visa-app-service
                port:
                  number: 80
